Constant scrollbar to prevent layout shifting

--- a/urysite/urysite/static/css/main.css
+++ b/urysite/urysite/static/css/main.css
@@ -10,6 +10,10 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
+html {
+    overflow-y: scroll;
+}
+
 html,
 button,
 input,
